# agent-interview

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
prompts/: ai_interviewer.yaml
