[project]
name = "nolep2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "livekit-agents[google,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
